app/styles/main.scss
@import "reset";
@import "variables";
@import "mixins";
@import "header";
@import "content";
@import "footer";

html, body {
  background: #333 url('../images/bg_tile.png') repeat;
  color: $mseFontColor;
  font: normal 16px/23px 'Roboto', sans-serif;
  letter-spacing: 1px;
}

a {
  color: $mseFontRed;
  text-decoration: none;
  border-bottom: solid 1px transparent;
  &:hover {
    border-bottom-color: $mseFontRed;
  }
}

.clearfix {
  clear: both;
}

